fix: upgrade api upload document